envs/se-prod-01/02-interaxo/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
spec:
  template:
    spec:
      containers:
        - name: webserver-simple
