envs/se-prod-01/02-interaxo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interaxo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /02-interaxo
